force-app/main/default/objects/Rubrik_Case_Attachment__c/Rubrik_Case_Attachment__c.object-meta.xml
<CustomObject>
    <description>custom object so you can operate on each file</description>
    <label>Rubrik Case Attachment</label>
    <nameField>
        <displayFormat>CA {0000000}</displayFormat>
        <label>Case Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rubrik Case Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>