force-app/main/default/objects/Rubrik_Case_Attachment__c/fields/Attachment_Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Size_Bytes__c</fullName>
    <label>Attachment Size (Bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>