force-app/main/default/objects/Rubrik_Case_Attachment__c/fields/Attachment_Size_in_MB__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Size_in_MB__c</fullName>
    <formula>Attachment_Size_Bytes__c /1024/1024</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment Size in MB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>