force-app/main/default/objects/Rubrik_Case_Attachment__c/fields/File_Path__c.field-meta.xml
<CustomField>
    <fullName>File_Path__c</fullName>
    <label>File Path</label>
    <type>Url</type>
</CustomField>