force-app/main/default/objects/Rubrik_Case_Attachment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upload Failed</fullName>
            </value>
            <value>
                <fullName>Upload Successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>